feat: :sparkles: Add GM macro to generate random NPCs

--- a/lang/en.json
+++ b/lang/en.json
@@ -44,6 +44,7 @@
   "SDM.AttackSocial": "social",
   "SDM.AttackTarget": "Attack Type",
   "SDM.BiomagicalCorruption": "Biomagical Corruption",
+  "SDM.brick-bastions": "Brick Bastions",
   "SDM.BurdensPenalty": "Each burden imposes a -1 to all rolls",
   "SDM.ButtonApply": "Apply",
   "SDM.ButtonCancel": "Cancel",
@@ -64,10 +65,15 @@
   "SDM.ChatContextHealing": "Apply as Healing",
   "SDM.CombatantsExcluded": "Excluded from combat: {names}",
   "SDM.Cost": "Cost",
+  "SDM.CreateNPC": "Create NPC",
+  "SDM.CreateRandomNPC": "NPC Generator",
+  "SDM.CreatureTable": "NPC Table",
   "SDM.CriticalFailure": "Critical Failure",
   "SDM.CriticalSuccess": "Critical Success",
+  "SDM.crystal-cannons": " Crystal Cannons",
   "SDM.CustomInitiative": "Custom Initiative",
   "SDM.Damage": "Damage",
+  "SDM.darting-dodgers": "Darting Dodgers",
   "SDM.DefaultAbility": "Default Ability",
   "SDM.DeleteDocConfirmation": "Delete {doc} permanently?",
   "SDM.DeletePower": "Delete Power",
@@ -122,6 +128,7 @@
   "SDM.EffectSource": "Source",
   "SDM.EffectTemporary": "Temporary Effects",
   "SDM.EffectToggle": "Toggle Effect",
+  "SDM.erratic-expendables": " Erratic Expendables",
   "SDM.ErrorActorNoHeroDice": "{actor} has no hero dice available for this roll!",
   "SDM.ErrorCashManagementFailed": "An error has happened during cash transfer!",
   "SDM.ErrorInvalidDiceFaces": "Invalid number of faces for a die: {faces}",
@@ -188,10 +195,12 @@
   "SDM.FrequencyDay": "Day",
   "SDM.FrequencyWeek": "Week",
   "SDM.GearMaxPowers": "Max Stored Powers",
+  "SDM.generic-synthesized-creature": "Generic Synthesized Creature",
   "SDM.HealingHouseRule": "Healing House Rule",
   "SDM.HeroDice": "hero dice",
   "SDM.HeroDiceSpend": "{actor} spent {quantity} {diceLabel}",
   "SDM.HeroDie": "hero die",
+  "SDM.humans-of-the-pananthropy": " Humans of the Pananthropy",
   "SDM.Increment": "Increase by 1",
   "SDM.Initiative": "Initiative",
   "SDM.InventoryBurdens": "Burdens",
@@ -219,6 +228,7 @@
   "SDM.ItemToggleReadied": "Toggle Readied Status",
   "SDM.ItemTraitType": "Trait Type",
   "SDM.ItemWard": "Ward",
+  "SDM.OptionalField": "{field} (optional)",
   "SDM.Magitech": "Magitech",
   "SDM.ManageHeroDice": "Adjust Hero Dice",
   "SDM.MessageCritical": "Critical hit!",
@@ -234,6 +244,36 @@
   "SDM.MoraleUnderOutcomeMessage": "The NPC continues to struggle, grimly determined, resolute for now.",
   "SDM.NoPowers": "Empty Power Album",
   "SDM.NpcCr": "CR",
+  "SDM.NPCTraitAdaptable": "Adaptable. Copy an enemy's last used special ability.",
+  "SDM.NPCTraitBonded": "Bonded. Spend life to grant an ally an equal bonus on their next roll.",
+  "SDM.NPCTraitCharger": "Charger. Double damage after a direct charge.",
+  "SDM.NPCTraitCircleOfPain": "Circle of Pain. Nearby allies deal and suffer double damage. Adjacent foes just suffer double damage",
+  "SDM.NPCTraitCommonHumanity": "Common Humanity. Spend 1 life to appeal for understanding and parlay (save)",
+  "SDM.NPCTraitDeathCurse": "Death Curse. Killer suffers a psychic burden.",
+  "SDM.NPCTraitDenial": "Denial. Adjacent enemies have difficulty moving.",
+  "SDM.NPCTraitDesperateShot": "Desperate Shot. Deal triple damage when at 1 life.",
+  "SDM.NPCTraitDoubleAttack": "Double Attack. Attacks twice with one action.",
+  "SDM.NPCTraitEvasive": "Evasive. Sacrifice attack to add bonus to defense.",
+  "SDM.NPCTraitFeedback": "Feedback. Each hit suffered adds 1d6 to damage.",
+  "SDM.NPCTraitFrenzy": "Frenzy. Spend 2 defense to get a free attack.",
+  "SDM.NPCTraitKillbite": "Killbite. Gets free attack on death.",
+  "SDM.NPCTraitMartyr": "Martyr. On death, grants their bonus to nearby allies.",
+  "SDM.NPCTraitOnceAgain": "Once Again. Revives 2 rounds after death. Once.",
+  "SDM.NPCTraitOvercharge": "Overcharge. Spend level life to double damage.",
+  "SDM.NPCTraitPhase": "Phase. Spend 1 life to become a ghost for 1 round.",
+  "SDM.NPCTraitResistomorph": "Resistomorph. After being hit by an attack, ignore that attack type for one round.",
+  "SDM.NPCTraitRiposte": "Riposte. Free counterattack against missed attacks.",
+  "SDM.NPCTraitRockblood": "Rockblood. Below half life, double defense.",
+  "SDM.NPCTraitShatter": "Shatter. On death, level x d4* dmg to all nearby.",
+  "SDM.NPCTraitShieldfriend": "Shieldfriend. Can take a hit meant for nearby allies.",
+  "SDM.NPCTraitSlam": "Slam. Spend 5 life: knock down adjacent foes (save).",
+  "SDM.NPCTraitSpringer": "Springer. Jump away after attacking without provoking an opportunity attack.",
+  "SDM.NPCTraitStabber": "Stabber. Double damage to surprised opponents.",
+  "SDM.NPCTraitSteadfast": "Steadfast. Cannot be moved against their will.",
+  "SDM.NPCTraitTactical": "Tactical. After being hit by an attack, gains +3 defense against that attack type.",
+  "SDM.NPCTraitTeamwork": "Teamwork. +2 bonus and defense next to an ally.",
+  "SDM.NPCTraitTickingCorpse": "Ticking Corpse. Deals double damage to all nearby 1d4 rounds after death (save to negate).",
+  "SDM.NPCTraitToolmaker": "Toolmaker. Improvise a weapon or tool in 1 round.",
   "SDM.NpcXp": "XP",
   "SDM.OneHanded": "One-Handed",
   "SDM.OriginalRoll": "Original roll",
@@ -380,6 +420,12 @@
   "SDM.TabBiography": "Biography",
   "SDM.TabEffects": "Effects",
   "SDM.TabInventory": "Inventory",
+  "SDM.TableDesc.BrickBastions": "Floating shields, animated armors, soil golems, lumberlings, horde zombies, crawling flesh centipedes,<br>armor vomes,gelatinous skeletons, and other creatures that can't avoid getting hit. Often slow.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
+  "SDM.TableDesc.CrystalCannons": "Electric wizards, gas goblins, spore shooters, drop bears, doom discs, floating rayballs, porcelain liches,<br> thanatic fanatics, and others that deal damage but can't take it.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
+  "SDM.TableDesc.DartingDodgers": "Hoptoads, lashing leapers, vomitorrials, nimblers, fire furies, nightmare ninjas, neon knights, mercury golems,<br>bioenhanced bandits, and other creatures that depend on their speed to avoid attacks and score hits.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
+  "SDM.TableDesc.ErraticExpendables": "Doom drones, exploding skeletons, suicide squirrels, spitborn ghoulies, shackleminded grenadiers, bicycle cavalry.<br>Not expected to return from the fight.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
+  "SDM.TableDesc.GenericSynthesizedCreature": "The gods in their post-mechanical kindness, the demiurges,the life generators,the mother machines,<br> the matter makers, the beast spews, they give forth many things.<br>Though many fail to live, some live to terrify. If it's alive and has character, this table will serve.<br><b>Vastlands GuideBook (VLG p. 162)</b>",
+  "SDM.TableDesc.HumansOfThePananthropy": "Common pan-humanity includes all close-to-baseline sentient and soulful post-humans, retro-humans, dwarfs,<br>half-elfs, halflings, quarterlings, half-orcs, golems, liches, iron humans, lings, and ghosts.<br> If it lives in a town and does human things, it's probably a human of some sort.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
   "SDM.TabNotes": "Notes",
   "SDM.TabPet": "Pet",
   "SDM.Target": "Target",
@@ -398,6 +444,7 @@
   "SDM.UnitSacks": "sacks",
   "SDM.UnitSoaps": "soaps",
   "SDM.UnitStones": "stones",
+  "SDM.UnnamedNPC": "Unnamed NPC",
   "SDM.UpdateAttack": "Configure {attack} Attack Options",
   "SDM.UpdatedHeroDice": "Updated hero dice for {number} character(s)!",
   "SDM.WardType": "Type",
