--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -44,6 +44,7 @@
   "SDM.AttackSocial": "social",
   "SDM.AttackTarget": "Tipo de Ataque",
   "SDM.BiomagicalCorruption": "Corrupção Biomágica",
+  "SDM.brick-bastions": "Bastiões de Tijolo",
   "SDM.BurdensPenalty": "Cada fardo penaliza todas as rolagens em -1",
   "SDM.ButtonApply": "Aplicar",
   "SDM.ButtonCancel": "Cancelar",
@@ -64,10 +65,15 @@
   "SDM.ChatContextHealing": "Aplicar como Cura",
   "SDM.CombatantsExcluded": "Excluídos do combate: {names}",
   "SDM.Cost": "Custo",
+  "SDM.CreateNPC": "Criar NPC",
+  "SDM.CreateRandomNPC": "Gerador de NPC",
+  "SDM.CreatureTable": "Tabela de NPCs",
   "SDM.CriticalFailure": "Falha Crítica",
   "SDM.CriticalSuccess": "Sucesso Crítico",
+  "SDM.crystal-cannons": "Canhões de Cristal",
   "SDM.CustomInitiative": "Iniciativa Customizada",
   "SDM.Damage": "Dano",
+  "SDM.darting-dodgers": "Fugitivos Velozes",
   "SDM.DefaultAbility": "Atributo Padrão",
   "SDM.DeleteDocConfirmation": "Deletar {doc} permanentemente?",
   "SDM.DeletePower": "Deletar Poder",
@@ -122,6 +128,7 @@
   "SDM.EffectSource": "Fonte",
   "SDM.EffectTemporary": "Efeitos Temporários",
   "SDM.EffectToggle": "Alternar Efeito",
+  "SDM.erratic-expendables": "Descartáveis Erráticos",
   "SDM.ErrorActorNoHeroDice": "{actor} não tem dados heróicos para esta rolagem!",
   "SDM.ErrorCashManagementFailed": "Erro durante transferência de dinheiro!",
   "SDM.ErrorInvalidDiceFaces": "Número inválido de lados para dado: {faces}",
@@ -188,10 +195,12 @@
   "SDM.FrequencyDay": "Dia",
   "SDM.FrequencyWeek": "Semana",
   "SDM.GearMaxPowers": "Máximo de Poderes",
+  "SDM.generic-synthesized-creature": "Criatura Sintetizada Genérica",
   "SDM.HealingHouseRule": "Regra de Cura",
   "SDM.HeroDice": "dados heróicos",
   "SDM.HeroDiceSpend": "{actor} gastou {quantity} {diceLabel}",
   "SDM.HeroDie": "dado heróico",
+  "SDM.humans-of-the-pananthropy": "Humanos da Panantrópia",
   "SDM.Increment": "Aumentar em 1",
   "SDM.Initiative": "Iniciativa",
   "SDM.InventoryBurdens": "Fardos",
@@ -232,8 +241,39 @@
   "SDM.MoraleOverOutcomeMessage": "O NPC entra em colapso: foge, recua, rende-se ou encerra o combate de outra forma. Quanto melhor treinado, mais organizada será a retirada.",
   "SDM.MoraleUnderOutcome": "Abaixo do Moral",
   "SDM.MoraleUnderOutcomeMessage": "O NPC continua lutando, com determinação sombria, resoluto por enquanto.",
+  "SDM.OptionalField": "{field} (opcional)",
   "SDM.NoPowers": "Álbum de Poderes Vazio",
   "SDM.NpcCr": "ND",
+  "SDM.NPCTraitAdaptable": "Adaptável. Copia a última habilidade especial usada por um inimigo.",
+  "SDM.NPCTraitBonded": "Vinculado. Gasta vida para conceder a um aliado bônus igual em sua próxima rolagem.",
+  "SDM.NPCTraitCharger": "Arremetedor. Dano dobrado após uma carga direta.",
+  "SDM.NPCTraitCircleOfPain": "Círculo da Dor. Aliados próximos causam e sofrem dano dobrado. Inimigos adjacentes apenas sofrem dano dobrado.",
+  "SDM.NPCTraitCommonHumanity": "Humanidade Comum. Gasta 1 vida para apelar à compreensão e negociar (teste).",
+  "SDM.NPCTraitDeathCurse": "Maldição da Morte. O assassino sofre um fardo psíquico.",
+  "SDM.NPCTraitDenial": "Negação. Inimigos adjacentes têm dificuldade para se mover.",
+  "SDM.NPCTraitDesperateShot": "Tiro Desesperado. Causa dano triplo quando com 1 de vida.",
+  "SDM.NPCTraitDoubleAttack": "Ataque Duplo. Ataca duas vezes com uma ação.",
+  "SDM.NPCTraitEvasive": "Evasivo. Sacrifica o ataque para adicionar bônus à defesa.",
+  "SDM.NPCTraitFeedback": "Feedback. Cada golpe sofrido adiciona +1d6 ao dano.",
+  "SDM.NPCTraitFrenzy": "Frenesi. Gasta 2 de defesa para realizar um ataque gratuito.",
+  "SDM.NPCTraitKillbite": "Mordemorte. Realiza ataque gratuito ao morrer.",
+  "SDM.NPCTraitMartyr": "Mártir. Ao morrer, concede seu bônus a aliados próximos.",
+  "SDM.NPCTraitOnceAgain": "Mais Uma Vez. Ressuscita 2 rodadas após a morte. Apenas uma vez.",
+  "SDM.NPCTraitOvercharge": "Sobrecarga. Gasta vida igual ao nível para dobrar o dano.",
+  "SDM.NPCTraitPhase": "Fasear. Gasta 1 vida para se tornar fantasma por 1 rodada.",
+  "SDM.NPCTraitResistomorph": "Resistomorfo. Após ser atingido, ignora esse tipo de ataque por 1 rodada.",
+  "SDM.NPCTraitRiposte": "Ripostar. Contra-ataque gratuito contra ataques que errem.",
+  "SDM.NPCTraitRockblood": "Sangrocha. Abaixo da metade da vida, defesa dobrada.",
+  "SDM.NPCTraitShatter": "Estilhaçar. Ao morrer, causa dano de nível × d4 a todos próximos.",
+  "SDM.NPCTraitShieldfriend": "Escudamigo. Pode receber um golpe destinado a aliados próximos.",
+  "SDM.NPCTraitSlam": "Impacto. Gasta 5 de vida: derruba inimigos adjacentes (teste).",
+  "SDM.NPCTraitSpringer": "Saltador. Afasta-se após atacar sem provocar ataques de oportunidade.",
+  "SDM.NPCTraitStabber": "Punhalador. Dano dobrado em oponentes surpresos.",
+  "SDM.NPCTraitSteadfast": "Inabalável. Não pode ser movido contra sua vontade.",
+  "SDM.NPCTraitTactical": "Tático. Após ser atingido, ganha +3 de defesa contra esse tipo de ataque.",
+  "SDM.NPCTraitTeamwork": "Trabalho em Equipe. +2 de bônus e defesa ao lado de um aliado.",
+  "SDM.NPCTraitTickingCorpse": "Cadáver Relógio. Causa dano dobrado a todos próximos 1d4 rodadas após a morte (teste para anular).",
+  "SDM.NPCTraitToolmaker": "Armeiro. Improvise uma arma ou ferramenta em 1 rodada.",
   "SDM.NpcXp": "EXP",
   "SDM.OneHanded": "Uma mão",
   "SDM.OriginalRoll": "Rolagem original",
@@ -380,6 +420,12 @@
   "SDM.TabBiography": "Biografia",
   "SDM.TabEffects": "Efeitos",
   "SDM.TabInventory": "Inventário",
+  "SDM.TableDesc.BrickBastions": "Escudos flutuantes, armaduras animadas, golems de terra, troncos vivos, hordas de zumbis,<br>centopéias de carne rastejante, armaduras-vomês, esqueletos gelatinosos<br>e outras criaturas que não conseguem evitar golpes. Frequentemente lentas.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
+  "SDM.TableDesc.CrystalCannons": "Feiticeiros elétricos, goblins gasosos, lançadores de esporos, ursos caidores,<br>discos da perdição,esferas flutuantes, liches de porcelana, fanáticos tanáticos,<br>e outros que causam dano mas não conseguem resistir.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
+  "SDM.TableDesc.DartingDodgers": "Sapos saltadores, saltadores chicoteantes, vomitorriais, ágeis, fúrias de fogo, ninjas de pesadelo,<br>cavaleiros de néon, golems de mercúrio, bandidos biorreforçados, e outras criaturas que dependem<br>da velocidade para evitar ataques e acertar golpes.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
+  "SDM.TableDesc.ErraticExpendables": "Drones da perdição, esqueletos explosivos, esquilos suicidas, ghoulies cuspidos,<br>granadeiros algemados, cavalaria de bicicleta.<br>Não se espera que retornem da luta.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
+  "SDM.TableDesc.GenericSynthesizedCreature": "Os deuses em sua bondade pós-mecânica, os demiurgos, os geradores de vida,<br>as máquinas-mãe, os criadores de matéria, os vomitadores de bestas, dão à luz muitas coisas.<br>Muitos não sobrevivem, alguns aterrorizam. Se está vivo e tem caráter, esta tabela serve.<br><b>Vastlands GuideBook (VLG p. 162)</b>",
+  "SDM.TableDesc.HumansOfThePananthropy": "A pan-humanidade comum inclui pós-humanos próximos do padrão, retro-humanos, anões,<br>meio-elfos, halflings, quarterlings, meio-orcs, golems, liches, humanos de ferro, lings e fantasmas.<br>Se vive numa cidade e faz coisas humanas, provavelmente é algum tipo de humano.<br><b>Vastlands GuideBook (VLG p. 163)</b>",
   "SDM.TabNotes": "Anotações",
   "SDM.TabPet": "Pet",
   "SDM.Target": "Alvo",
@@ -398,6 +444,7 @@
   "SDM.UnitSacks": "sacas",
   "SDM.UnitSoaps": "carteiras",
   "SDM.UnitStones": "mochilas",
+  "SDM.UnnamedNPC": "NPC Sem Nome",
   "SDM.UpdateAttack": "Configurar Ataque {attack}",
   "SDM.UpdatedHeroDice": "Dados heróicos atualizados para {number} personagem(ns)!",
   "SDM.WardType": "Tipo",
