feat: :sparkles: Add some utility links under system badge version

--- a/lang/en.json
+++ b/lang/en.json
@@ -206,6 +206,7 @@
   "SDM.InventoryBurdens": "Burdens",
   "SDM.InventoryItems": "Items",
   "SDM.InventoryTraits": "Traits",
+  "SDM.Issues": "Issues",
   "SDM.ItemArmor": "Armor",
   "SDM.ItemArmorType": "Type",
   "SDM.ItemCost": "Unit Cost (€)",
@@ -228,7 +229,6 @@
   "SDM.ItemToggleReadied": "Toggle Readied Status",
   "SDM.ItemTraitType": "Trait Type",
   "SDM.ItemWard": "Ward",
-  "SDM.OptionalField": "{field} (optional)",
   "SDM.Magitech": "Magitech",
   "SDM.ManageHeroDice": "Adjust Hero Dice",
   "SDM.MessageCritical": "Critical hit!",
@@ -243,6 +243,7 @@
   "SDM.MoraleUnderOutcome": "Under Morale",
   "SDM.MoraleUnderOutcomeMessage": "The NPC continues to struggle, grimly determined, resolute for now.",
   "SDM.NoPowers": "Empty Power Album",
+  "SDM.Notes": "Notes",
   "SDM.NpcCr": "CR",
   "SDM.NPCTraitAdaptable": "Adaptable. Copy an enemy's last used special ability.",
   "SDM.NPCTraitBonded": "Bonded. Spend life to grant an ally an equal bonus on their next roll.",
@@ -276,6 +277,7 @@
   "SDM.NPCTraitToolmaker": "Toolmaker. Improvise a weapon or tool in 1 round.",
   "SDM.NpcXp": "XP",
   "SDM.OneHanded": "One-Handed",
+  "SDM.OptionalField": "{field} (optional)",
   "SDM.OriginalRoll": "Original roll",
   "SDM.Power": "Power",
   "SDM.PowerAlbum": "Power Album",
@@ -457,6 +459,7 @@
   "SDM.WeaponRange": "Range",
   "SDM.WeaponVersatile": "Versatile",
   "SDM.WeaponVersatileDamage": "Versatile Damage",
+  "SDM.Wiki": "Wiki",
   "SDM.XPToGive": "XP to Give",
   "TYPE.Burden": "Burden",
   "TYPE.Effect": "Effect",
