--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -206,6 +206,7 @@
   "SDM.InventoryBurdens": "Fardos",
   "SDM.InventoryItems": "Itens",
   "SDM.InventoryTraits": "Traços",
+  "SDM.Issues": "Problemas",
   "SDM.ItemArmor": "Armadura",
   "SDM.ItemArmorType": "Tipo",
   "SDM.ItemCost": "Custo Unitário (€)",
@@ -241,8 +242,8 @@
   "SDM.MoraleOverOutcomeMessage": "O NPC entra em colapso: foge, recua, rende-se ou encerra o combate de outra forma. Quanto melhor treinado, mais organizada será a retirada.",
   "SDM.MoraleUnderOutcome": "Abaixo do Moral",
   "SDM.MoraleUnderOutcomeMessage": "O NPC continua lutando, com determinação sombria, resoluto por enquanto.",
-  "SDM.OptionalField": "{field} (opcional)",
   "SDM.NoPowers": "Álbum de Poderes Vazio",
+  "SDM.Notes": "Notas",
   "SDM.NpcCr": "ND",
   "SDM.NPCTraitAdaptable": "Adaptável. Copia a última habilidade especial usada por um inimigo.",
   "SDM.NPCTraitBonded": "Vinculado. Gasta vida para conceder a um aliado bônus igual em sua próxima rolagem.",
@@ -276,6 +277,7 @@
   "SDM.NPCTraitToolmaker": "Armeiro. Improvise uma arma ou ferramenta em 1 rodada.",
   "SDM.NpcXp": "EXP",
   "SDM.OneHanded": "Uma mão",
+  "SDM.OptionalField": "{field} (opcional)",
   "SDM.OriginalRoll": "Rolagem original",
   "SDM.Power": "Poder",
   "SDM.PowerAlbum": "Álbum de Poderes",
@@ -457,6 +459,7 @@
   "SDM.WeaponRange": "Alcançe",
   "SDM.WeaponVersatile": "Versátil",
   "SDM.WeaponVersatileDamage": "Dano versátil",
+  "SDM.Wiki": "Wiki",
   "SDM.XPToGive": "EXP para Distribuir",
   "TYPE.Burden": "Fardo",
   "TYPE.Effect": "Efeito",
