fix: :bug: Small fixes on randonNPC generator macro

--- a/lang/en.json
+++ b/lang/en.json
@@ -245,6 +245,7 @@
   "SDM.NoPowers": "Empty Power Album",
   "SDM.Notes": "Notes",
   "SDM.NpcCr": "CR",
+  "SDM.NPCCreated": "Random NPC {name}, level: {level} was created! ",
   "SDM.NPCTraitAdaptable": "Adaptable. Copy an enemy's last used special ability.",
   "SDM.NPCTraitBonded": "Bonded. Spend life to grant an ally an equal bonus on their next roll.",
   "SDM.NPCTraitCharger": "Charger. Double damage after a direct charge.",
@@ -302,9 +303,9 @@
   "SDM.PullModeCarting": "carting",
   "SDM.PullModeDragging": "dragging",
   "SDM.PullModeFlying": "flying",
+  "SDM.RangeClose": "close",
   "SDM.RangeLong": "long",
   "SDM.RangeMedium": "medium",
-  "SDM.RangeClose": "close",
   "SDM.RangeShort": "short",
   "SDM.Reaction": "Reaction",
   "SDM.ReactionCheck": "Oracle of Behavior",
