--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -245,6 +245,7 @@
   "SDM.NoPowers": "Álbum de Poderes Vazio",
   "SDM.Notes": "Notas",
   "SDM.NpcCr": "ND",
+  "SDM.NPCCreated": "NPC Randômico {name}, nível: {level} foi criado!",
   "SDM.NPCTraitAdaptable": "Adaptável. Copia a última habilidade especial usada por um inimigo.",
   "SDM.NPCTraitBonded": "Vinculado. Gasta vida para conceder a um aliado bônus igual em sua próxima rolagem.",
   "SDM.NPCTraitCharger": "Arremetedor. Dano dobrado após uma carga direta.",
@@ -302,9 +303,9 @@
   "SDM.PullModeCarting": "transporte",
   "SDM.PullModeDragging": "arraste",
   "SDM.PullModeFlying": "voo",
+  "SDM.RangeClose": "perto",
   "SDM.RangeLong": "longo",
   "SDM.RangeMedium": "médio",
-  "SDM.RangeClose": "perto",
   "SDM.RangeShort": "curto",
   "SDM.Reaction": "Reação",
   "SDM.ReactionCheck": "Oráculo do Comportamento",
