fix: :sparkles: Add background trait generator player macro

--- a/lang/en.json
+++ b/lang/en.json
@@ -43,6 +43,220 @@
   "SDM.AttackRanged": "Ranged",
   "SDM.AttackSocial": "social",
   "SDM.AttackTarget": "Attack Type",
+  "SDM.BackgroundCancel": "Cancel",
+  "SDM.BackgroundConfirm": "Create Background",
+  "SDM.BackgroundEditablePreview": "Background Editable Preview",
+  "SDM.BackgroundFlavor": "Flavor",
+  "SDM.BackgroundGenerator": "Background Generator",
+  "SDM.BackgroundInvalidCharacter": "No valid character was configured or selected!",
+  "SDM.BackgroundReroll": "Reroll Background Table",
+  "SDM.BackgroundRerollConfirmation": "Reroll Background Options?",
+  "SDM.BackgroundRole": "Role",
+  "SDM.BackgroundRole1": "Role 1",
+  "SDM.BackgroundRole2": "Role 2",
+  "SDM.BackgroundRow01.Flavor": "blue land",
+  "SDM.BackgroundRow01.Role1": "narco",
+  "SDM.BackgroundRow01.Role2": "apothecary",
+  "SDM.BackgroundRow01.Spin": "drug-fuelled dream travel",
+  "SDM.BackgroundRow01.Task": "mix potions, poisons, drugs",
+  "SDM.BackgroundRow02.Flavor": "dead god",
+  "SDM.BackgroundRow02.Role1": "scholar",
+  "SDM.BackgroundRow02.Role2": "of Long Ago",
+  "SDM.BackgroundRow02.Spin": "psychokinetic acrobatics",
+  "SDM.BackgroundRow02.Task": "explore the false past of lost times",
+  "SDM.BackgroundRow03.Flavor": "peacemaker",
+  "SDM.BackgroundRow03.Role1": "big game",
+  "SDM.BackgroundRow03.Role2": "tourist",
+  "SDM.BackgroundRow03.Spin": "pray, love, eat monsters?",
+  "SDM.BackgroundRow03.Task": "find and enjoy strange beasts",
+  "SDM.BackgroundRow04.Flavor": "moon",
+  "SDM.BackgroundRow04.Role1": "bio",
+  "SDM.BackgroundRow04.Role2": "mechanic",
+  "SDM.BackgroundRow04.Spin": "body-horror technomagic",
+  "SDM.BackgroundRow04.Task": "modify and create living things",
+  "SDM.BackgroundRow05.Flavor": "coaster",
+  "SDM.BackgroundRow05.Role1": "cat",
+  "SDM.BackgroundRow05.Role2": "groom",
+  "SDM.BackgroundRow05.Spin": "pet's hired muscle",
+  "SDM.BackgroundRow05.Task": "make cats [or other masters] happy",
+  "SDM.BackgroundRow06.Flavor": "scavenger",
+  "SDM.BackgroundRow06.Role1": "all",
+  "SDM.BackgroundRow06.Role2": "chemist",
+  "SDM.BackgroundRow06.Spin": "explosive philosophies",
+  "SDM.BackgroundRow06.Task": "manipulate the basic iks of matter",
+  "SDM.BackgroundRow07.Flavor": "purple land",
+  "SDM.BackgroundRow07.Role1": "therapist",
+  "SDM.BackgroundRow07.Role2": "barista",
+  "SDM.BackgroundRow07.Spin": "small-business expertise",
+  "SDM.BackgroundRow07.Task": "make coffee and make peace",
+  "SDM.BackgroundRow08.Flavor": "feline",
+  "SDM.BackgroundRow08.Role1": "error",
+  "SDM.BackgroundRow08.Role2": "censor",
+  "SDM.BackgroundRow08.Spin": "inquisition tactics",
+  "SDM.BackgroundRow08.Task": "prevent bad-think, fix mistakes",
+  "SDM.BackgroundRow09.Flavor": "plantation",
+  "SDM.BackgroundRow09.Role1": "puppet",
+  "SDM.BackgroundRow09.Role2": "performer",
+  "SDM.BackgroundRow09.Spin": "distraction or destruction?",
+  "SDM.BackgroundRow09.Task": "undo ennui, create moderate joy",
+  "SDM.BackgroundRow10.Flavor": "steppe",
+  "SDM.BackgroundRow10.Role1": "wood",
+  "SDM.BackgroundRow10.Role2": "singer",
+  "SDM.BackgroundRow10.Spin": "talk to trees, hear herbs",
+  "SDM.BackgroundRow10.Task": "shape plants, sculpt furnishings",
+  "SDM.BackgroundRow11.Flavor": "violet city",
+  "SDM.BackgroundRow11.Role1": "living",
+  "SDM.BackgroundRow11.Role2": "stoner",
+  "SDM.BackgroundRow11.Spin": "carry landcoral in your skin",
+  "SDM.BackgroundRow11.Task": "shape stone, sing houses",
+  "SDM.BackgroundRow12.Flavor": "red land",
+  "SDM.BackgroundRow12.Role1": "aqua",
+  "SDM.BackgroundRow12.Role2": "farmer",
+  "SDM.BackgroundRow12.Spin": "speak with strange fish",
+  "SDM.BackgroundRow12.Task": "protein and fruits from the waters",
+  "SDM.BackgroundRow13.Flavor": "vampire",
+  "SDM.BackgroundRow13.Role1": "nöosphere",
+  "SDM.BackgroundRow13.Role2": "caller",
+  "SDM.BackgroundRow13.Spin": "access divine communications",
+  "SDM.BackgroundRow13.Task": "talk to the hidden archive daemons",
+  "SDM.BackgroundRow14.Flavor": "rust",
+  "SDM.BackgroundRow14.Role1": "gun",
+  "SDM.BackgroundRow14.Role2": "maker",
+  "SDM.BackgroundRow14.Spin": "rebuild illegal devices",
+  "SDM.BackgroundRow14.Task": "craft the forbidden tools of Long Ago",
+  "SDM.BackgroundRow15.Flavor": "vintner",
+  "SDM.BackgroundRow15.Role1": "soil",
+  "SDM.BackgroundRow15.Role2": "laborer",
+  "SDM.BackgroundRow15.Spin": "understand survival basics",
+  "SDM.BackgroundRow15.Task": "optimize primary production",
+  "SDM.BackgroundRow16.Flavor": "RL district",
+  "SDM.BackgroundRow16.Role1": "life",
+  "SDM.BackgroundRow16.Role2": "generator",
+  "SDM.BackgroundRow16.Spin": "spin stories and lies",
+  "SDM.BackgroundRow16.Task": "create compelling human content",
+  "SDM.BackgroundRow17.Flavor": "hexad",
+  "SDM.BackgroundRow17.Role1": "town",
+  "SDM.BackgroundRow17.Role2": "sanitizer",
+  "SDM.BackgroundRow17.Spin": "travel unseen in urban bowels",
+  "SDM.BackgroundRow17.Task": "keep the town clean and alive",
+  "SDM.BackgroundRow18.Flavor": "doghead",
+  "SDM.BackgroundRow18.Role1": "daemon",
+  "SDM.BackgroundRow18.Role2": "summoner",
+  "SDM.BackgroundRow18.Spin": "manipulate the old minds",
+  "SDM.BackgroundRow18.Task": "interface with disembodied minds",
+  "SDM.BackgroundRow19.Flavor": "orange land",
+  "SDM.BackgroundRow19.Role1": "mule",
+  "SDM.BackgroundRow19.Role2": "whisperer",
+  "SDM.BackgroundRow19.Spin": "uplift downtrodden animals",
+  "SDM.BackgroundRow19.Task": "interface with beast-bodied minds",
+  "SDM.BackgroundRow20.Flavor": "halfling",
+  "SDM.BackgroundRow20.Role1": "herbalist",
+  "SDM.BackgroundRow20.Role2": "officer",
+  "SDM.BackgroundRow20.Spin": "cloud minds for shared goals",
+  "SDM.BackgroundRow20.Task": "ensure adequate public harmony",
+  "SDM.BackgroundRow21.Flavor": "council",
+  "SDM.BackgroundRow21.Role1": "necromancer",
+  "SDM.BackgroundRow21.Role2": "lawyer",
+  "SDM.BackgroundRow21.Spin": "ensure proper reincarnation",
+  "SDM.BackgroundRow21.Task": "uphold postmortal legal rights",
+  "SDM.BackgroundRow22.Flavor": "ancestor",
+  "SDM.BackgroundRow22.Role1": "old",
+  "SDM.BackgroundRow22.Role2": "technician",
+  "SDM.BackgroundRow22.Spin": "use Long Long Ago tools",
+  "SDM.BackgroundRow22.Task": "chant the mantras of maintenance",
+  "SDM.BackgroundRow23.Flavor": "agent",
+  "SDM.BackgroundRow23.Role1": "golem",
+  "SDM.BackgroundRow23.Role2": "engineer",
+  "SDM.BackgroundRow23.Spin": "service the electric overlords",
+  "SDM.BackgroundRow23.Task": "keep the machine humans running",
+  "SDM.BackgroundRow24.Flavor": "pirate",
+  "SDM.BackgroundRow24.Role1": "middle",
+  "SDM.BackgroundRow24.Role2": "manager",
+  "SDM.BackgroundRow24.Spin": "navigate cruel bureaucracies",
+  "SDM.BackgroundRow24.Task": "assign assigned assignations",
+  "SDM.BackgroundRow25.Flavor": "plateau",
+  "SDM.BackgroundRow25.Role1": "road",
+  "SDM.BackgroundRow25.Role2": "walker",
+  "SDM.BackgroundRow25.Spin": "travel safely off the grid",
+  "SDM.BackgroundRow25.Task": "keep the roads alive and respected",
+  "SDM.BackgroundRow26.Flavor": "yellow land",
+  "SDM.BackgroundRow26.Role1": "inspector",
+  "SDM.BackgroundRow26.Role2": "private",
+  "SDM.BackgroundRow26.Spin": "find and keep grim secrets",
+  "SDM.BackgroundRow26.Task": "look, listen, and report to authority",
+  "SDM.BackgroundRow27.Flavor": "diesel dwarfer",
+  "SDM.BackgroundRow27.Role1": "licensed",
+  "SDM.BackgroundRow27.Role2": "merchant",
+  "SDM.BackgroundRow27.Spin": "maximize short-term gains",
+  "SDM.BackgroundRow27.Task": "truck and barter for the greater good",
+  "SDM.BackgroundRow28.Flavor": "decapolitan",
+  "SDM.BackgroundRow28.Role1": "protocol",
+  "SDM.BackgroundRow28.Role2": "soldier",
+  "SDM.BackgroundRow28.Spin": "cross tea & high dot etiquette",
+  "SDM.BackgroundRow28.Task": "keep the martial traditions alive",
+  "SDM.BackgroundRow29.Flavor": "saffron",
+  "SDM.BackgroundRow29.Role1": "astrologer",
+  "SDM.BackgroundRow29.Role2": "general",
+  "SDM.BackgroundRow29.Spin": "maintain order and discipline",
+  "SDM.BackgroundRow29.Task": "divine strategies from the stars",
+  "SDM.BackgroundRow30.Flavor": "horser",
+  "SDM.BackgroundRow30.Role1": "accountant",
+  "SDM.BackgroundRow30.Role2": "monk",
+  "SDM.BackgroundRow30.Spin": "keep the cog flower turning",
+  "SDM.BackgroundRow30.Task": "ensure the holy numbers go up",
+  "SDM.BackgroundRow31.Flavor": "golden desert",
+  "SDM.BackgroundRow31.Role1": "machine",
+  "SDM.BackgroundRow31.Role2": "herder",
+  "SDM.BackgroundRow31.Spin": "oil and multiply machines",
+  "SDM.BackgroundRow31.Task": "keep the synthetic flocks in line",
+  "SDM.BackgroundRow32.Flavor": "green land",
+  "SDM.BackgroundRow32.Role1": "content",
+  "SDM.BackgroundRow32.Role2": "promoter",
+  "SDM.BackgroundRow32.Spin": "tamp down false ideas",
+  "SDM.BackgroundRow32.Task": "popularize the latest entertainment",
+  "SDM.BackgroundRow33.Flavor": "metropolitan",
+  "SDM.BackgroundRow33.Role1": "advertising",
+  "SDM.BackgroundRow33.Role2": "servant",
+  "SDM.BackgroundRow33.Spin": "subversive subterfuge",
+  "SDM.BackgroundRow33.Task": "promote the corporate bottom line",
+  "SDM.BackgroundRow34.Flavor": "elfer",
+  "SDM.BackgroundRow34.Role1": "autodoc",
+  "SDM.BackgroundRow34.Role2": "nurse",
+  "SDM.BackgroundRow34.Spin": "parasite machine minds",
+  "SDM.BackgroundRow34.Task": "support a smarter golem than you",
+  "SDM.BackgroundRow35.Flavor": "falscher",
+  "SDM.BackgroundRow35.Role1": "professional",
+  "SDM.BackgroundRow35.Role2": "consumer",
+  "SDM.BackgroundRow35.Spin": "develop exquisite taste",
+  "SDM.BackgroundRow35.Task": "embody proper ethics",
+  "SDM.BackgroundRow36.Flavor": "timelost",
+  "SDM.BackgroundRow36.Role1": "leisure",
+  "SDM.BackgroundRow36.Role2": "maximizer",
+  "SDM.BackgroundRow36.Spin": "schmoozer socialite spy",
+  "SDM.BackgroundRow36.Task": "enjoy the fruits of civilization",
+  "SDM.BackgroundRow37.Flavor": "astral",
+  "SDM.BackgroundRow37.Role1": "rogue",
+  "SDM.BackgroundRow37.Role2": "trader",
+  "SDM.BackgroundRow37.Spin": "shave the coins for memories",
+  "SDM.BackgroundRow37.Task": "skirt the rules for profit",
+  "SDM.BackgroundRow38.Flavor": "ministry",
+  "SDM.BackgroundRow38.Role1": "show",
+  "SDM.BackgroundRow38.Role2": "hobo",
+  "SDM.BackgroundRow38.Spin": "dullway tunnel rat",
+  "SDM.BackgroundRow38.Task": "be a warning to the lazy",
+  "SDM.BackgroundRow39.Flavor": "barbarian",
+  "SDM.BackgroundRow39.Role1": "primary",
+  "SDM.BackgroundRow39.Role2": "noble",
+  "SDM.BackgroundRow39.Spin": "overwhelm the given order",
+  "SDM.BackgroundRow39.Task": "focus aspirations and social desires",
+  "SDM.BackgroundRow40.Flavor": "voidwalker",
+  "SDM.BackgroundRow40.Role1": "public",
+  "SDM.BackgroundRow40.Role2": "relative",
+  "SDM.BackgroundRow40.Spin": "unlock doors with your blood",
+  "SDM.BackgroundRow40.Task": "share social love and vibes",
+  "SDM.BackgroundSpin": "Spin",
+  "SDM.BackgroundTask": "Task",
+  "SDM.BackgroundTraitCreated": "{flavor} {role} background trait created for {name} character!",
   "SDM.BiomagicalCorruption": "Biomagical Corruption",
   "SDM.brick-bastions": "Brick Bastions",
   "SDM.BurdensPenalty": "Each burden imposes a -1 to all rolls",
@@ -104,6 +318,7 @@
   "SDM.EffectsLabel.system.all_save_bonus": "Bonus to all saving throw rolls",
   "SDM.EffectsLabel.system.armor_bonus": "Armor Bonus",
   "SDM.EffectsLabel.system.attack_bonus": "All attack bonus",
+  "SDM.EffectsLabel.system.base_damage_multiplier": "Starting damage multiplier value for critical hits",
   "SDM.EffectsLabel.system.burden_slots_bonus": "Affects the number of burden slots",
   "SDM.EffectsLabel.system.defense_bonus": "Physical defense bonus",
   "SDM.EffectsLabel.system.fantascience.bonus": "Fantascience attack bonus",
@@ -125,6 +340,7 @@
   "SDM.EffectsLabel.system.social_defense_bonus": "Social defense bonus",
   "SDM.EffectsLabel.system.trait_slots_bonus": "Affects the number of trait slots",
   "SDM.EffectsLabel.system.ward_bonus": "Ward bonus (affects mental defense and all saving throw rolls)",
+  "SDM.EffectsLabel.system.weapon_item_slots_bonus": "Number weapon items that won't take items slots",
   "SDM.EffectSource": "Source",
   "SDM.EffectTemporary": "Temporary Effects",
   "SDM.EffectToggle": "Toggle Effect",
