--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -43,6 +43,220 @@
   "SDM.AttackRanged": "À Distância",
   "SDM.AttackSocial": "social",
   "SDM.AttackTarget": "Tipo de Ataque",
+  "SDM.BackgroundCancel": "Cancelar",
+  "SDM.BackgroundConfirm": "Criar Antecedente",
+  "SDM.BackgroundEditablePreview": "Prévia Editável do Antecedente",
+  "SDM.BackgroundFlavor": "Tema",
+  "SDM.BackgroundGenerator": "Gerador de Antecedentes",
+  "SDM.BackgroundInvalidCharacter": "Nenhum personagem válido foi configurado ou selecionado!",
+  "SDM.BackgroundReroll": "Rerrolar Tabela de Antecedentes",
+  "SDM.BackgroundRerollConfirmation": "Rerrolar opções de Antecedentes?",
+  "SDM.BackgroundRole": "Papel",
+  "SDM.BackgroundRole1": "Papel 1",
+  "SDM.BackgroundRole2": "Papel 2",
+  "SDM.BackgroundRow01.Flavor": "terra azul",
+  "SDM.BackgroundRow01.Role1": "narco",
+  "SDM.BackgroundRow01.Role2": "boticário",
+  "SDM.BackgroundRow01.Spin": "viagem onírica movida a drogas",
+  "SDM.BackgroundRow01.Task": "misturar poções, venenos, drogas",
+  "SDM.BackgroundRow02.Flavor": "deus morto",
+  "SDM.BackgroundRow02.Role1": "erudito",
+  "SDM.BackgroundRow02.Role2": "do Longínquo Passado",
+  "SDM.BackgroundRow02.Spin": "acrobacias psicocinéticas",
+  "SDM.BackgroundRow02.Task": "explorar o falso passado dos tempos perdidos",
+  "SDM.BackgroundRow03.Flavor": "pacificador",
+  "SDM.BackgroundRow03.Role1": "grande caça",
+  "SDM.BackgroundRow03.Role2": "turista",
+  "SDM.BackgroundRow03.Spin": "orar, amar, comer monstros?",
+  "SDM.BackgroundRow03.Task": "encontrar e apreciar feras estranhas",
+  "SDM.BackgroundRow04.Flavor": "lua",
+  "SDM.BackgroundRow04.Role1": "bio",
+  "SDM.BackgroundRow04.Role2": "mecânico",
+  "SDM.BackgroundRow04.Spin": "tecnomagia de horror corporal",
+  "SDM.BackgroundRow04.Task": "modificar e criar seres vivos",
+  "SDM.BackgroundRow05.Flavor": "carrossel",
+  "SDM.BackgroundRow05.Role1": "gato",
+  "SDM.BackgroundRow05.Role2": "escovador",
+  "SDM.BackgroundRow05.Spin": "capanga de estimação contratado",
+  "SDM.BackgroundRow05.Task": "fazer gatos [ou outros mestres] felizes",
+  "SDM.BackgroundRow06.Flavor": "catador",
+  "SDM.BackgroundRow06.Role1": "todo",
+  "SDM.BackgroundRow06.Role2": "químico",
+  "SDM.BackgroundRow06.Spin": "filosofias explosivas",
+  "SDM.BackgroundRow06.Task": "manipular os iks básicos da matéria",
+  "SDM.BackgroundRow07.Flavor": "terra púrpura",
+  "SDM.BackgroundRow07.Role1": "terapeuta",
+  "SDM.BackgroundRow07.Role2": "barista",
+  "SDM.BackgroundRow07.Spin": "expertise de pequenos negócios",
+  "SDM.BackgroundRow07.Task": "fazer café e fazer paz",
+  "SDM.BackgroundRow08.Flavor": "felino",
+  "SDM.BackgroundRow08.Role1": "erro",
+  "SDM.BackgroundRow08.Role2": "censor",
+  "SDM.BackgroundRow08.Spin": "táticas inquisitoriais",
+  "SDM.BackgroundRow08.Task": "prevenir maus-pensamentos, corrigir erros",
+  "SDM.BackgroundRow09.Flavor": "plantação",
+  "SDM.BackgroundRow09.Role1": "marionete",
+  "SDM.BackgroundRow09.Role2": "performer",
+  "SDM.BackgroundRow09.Spin": "distração ou destruição?",
+  "SDM.BackgroundRow09.Task": "desfazer o tédio, criar alegria moderada",
+  "SDM.BackgroundRow10.Flavor": "estepe",
+  "SDM.BackgroundRow10.Role1": "madeira",
+  "SDM.BackgroundRow10.Role2": "cantor",
+  "SDM.BackgroundRow10.Spin": "falar com árvores, ouvir ervas",
+  "SDM.BackgroundRow10.Task": "moldar plantas, esculpir móveis",
+  "SDM.BackgroundRow11.Flavor": "cidade violeta",
+  "SDM.BackgroundRow11.Role1": "vivente",
+  "SDM.BackgroundRow11.Role2": "chapado",
+  "SDM.BackgroundRow11.Spin": "carregar coral-terra na pele",
+  "SDM.BackgroundRow11.Task": "moldar pedra, cantar casas",
+  "SDM.BackgroundRow12.Flavor": "terra vermelha",
+  "SDM.BackgroundRow12.Role1": "aqua",
+  "SDM.BackgroundRow12.Role2": "agricultor",
+  "SDM.BackgroundRow12.Spin": "falar com peixes estranhos",
+  "SDM.BackgroundRow12.Task": "proteínas e frutas das águas",
+  "SDM.BackgroundRow13.Flavor": "vampiro",
+  "SDM.BackgroundRow13.Role1": "nöosfera",
+  "SDM.BackgroundRow13.Role2": "invocador",
+  "SDM.BackgroundRow13.Spin": "acessar comunicações divinas",
+  "SDM.BackgroundRow13.Task": "falar com os demônios do arquivo oculto",
+  "SDM.BackgroundRow14.Flavor": "ferrugem",
+  "SDM.BackgroundRow14.Role1": "arma de fogo",
+  "SDM.BackgroundRow14.Role2": "fabricante",
+  "SDM.BackgroundRow14.Spin": "reconstruir dispositivos ilegais",
+  "SDM.BackgroundRow14.Task": "forjar ferramentas proibidas do Passado",
+  "SDM.BackgroundRow15.Flavor": "vinicultor",
+  "SDM.BackgroundRow15.Role1": "solo",
+  "SDM.BackgroundRow15.Role2": "trabalhador",
+  "SDM.BackgroundRow15.Spin": "entender os fundamentos da sobrevivência",
+  "SDM.BackgroundRow15.Task": "otimizar a produção primária",
+  "SDM.BackgroundRow16.Flavor": "distrito RL",
+  "SDM.BackgroundRow16.Role1": "vida",
+  "SDM.BackgroundRow16.Role2": "gerador",
+  "SDM.BackgroundRow16.Spin": "girar histórias e mentiras",
+  "SDM.BackgroundRow16.Task": "criar conteúdo humano envolvente",
+  "SDM.BackgroundRow17.Flavor": "hexade",
+  "SDM.BackgroundRow17.Role1": "vilarejo",
+  "SDM.BackgroundRow17.Role2": "sanitarista",
+  "SDM.BackgroundRow17.Spin": "viajar oculto nas entranhas urbanas",
+  "SDM.BackgroundRow17.Task": "manter a cidade limpa e viva",
+  "SDM.BackgroundRow18.Flavor": "cabeça de cão",
+  "SDM.BackgroundRow18.Role1": "demônio",
+  "SDM.BackgroundRow18.Role2": "invocador",
+  "SDM.BackgroundRow18.Spin": "manipular as velhas mentes",
+  "SDM.BackgroundRow18.Task": "interagir com mentes desencarnadas",
+  "SDM.BackgroundRow19.Flavor": "terra laranja",
+  "SDM.BackgroundRow19.Role1": "mula",
+  "SDM.BackgroundRow19.Role2": "sussurrador",
+  "SDM.BackgroundRow19.Spin": "elevar animais oprimidos",
+  "SDM.BackgroundRow19.Task": "interagir com mentes de corpos animais",
+  "SDM.BackgroundRow20.Flavor": "halfling",
+  "SDM.BackgroundRow20.Role1": "herbalista",
+  "SDM.BackgroundRow20.Role2": "oficial",
+  "SDM.BackgroundRow20.Spin": "nublar mentes para objetivos comuns",
+  "SDM.BackgroundRow20.Task": "garantir a harmonia pública adequada",
+  "SDM.BackgroundRow21.Flavor": "conselho",
+  "SDM.BackgroundRow21.Role1": "necromante",
+  "SDM.BackgroundRow21.Role2": "advogado",
+  "SDM.BackgroundRow21.Spin": "assegurar a reencarnação adequada",
+  "SDM.BackgroundRow21.Task": "defender os direitos legais pós-morte",
+  "SDM.BackgroundRow22.Flavor": "ancestral",
+  "SDM.BackgroundRow22.Role1": "antigo",
+  "SDM.BackgroundRow22.Role2": "técnico",
+  "SDM.BackgroundRow22.Spin": "usar ferramentas do Longínquo Passado",
+  "SDM.BackgroundRow22.Task": "entoar os mantras da manutenção",
+  "SDM.BackgroundRow23.Flavor": "agente",
+  "SDM.BackgroundRow23.Role1": "golem",
+  "SDM.BackgroundRow23.Role2": "engenheiro",
+  "SDM.BackgroundRow23.Spin": "servir os senhores elétricos",
+  "SDM.BackgroundRow23.Task": "manter os humanos-máquina funcionando",
+  "SDM.BackgroundRow24.Flavor": "pirata",
+  "SDM.BackgroundRow24.Role1": "meio",
+  "SDM.BackgroundRow24.Role2": "gerente",
+  "SDM.BackgroundRow24.Spin": "navegar em burocracias cruéis",
+  "SDM.BackgroundRow24.Task": "atribuir designações designadas",
+  "SDM.BackgroundRow25.Flavor": "planalto",
+  "SDM.BackgroundRow25.Role1": "estrada",
+  "SDM.BackgroundRow25.Role2": "caminhante",
+  "SDM.BackgroundRow25.Spin": "viajar seguro fora da rede",
+  "SDM.BackgroundRow25.Task": "manter as estradas vivas e respeitadas",
+  "SDM.BackgroundRow26.Flavor": "terra amarela",
+  "SDM.BackgroundRow26.Role1": "inspetor",
+  "SDM.BackgroundRow26.Role2": "detetive particular",
+  "SDM.BackgroundRow26.Spin": "descobrir e guardar segredos sombrios",
+  "SDM.BackgroundRow26.Task": "observar, ouvir e relatar às autoridades",
+  "SDM.BackgroundRow27.Flavor": "anão a diesel",
+  "SDM.BackgroundRow27.Role1": "licenciado",
+  "SDM.BackgroundRow27.Role2": "mercador",
+  "SDM.BackgroundRow27.Spin": "maximizar ganhos imediatos",
+  "SDM.BackgroundRow27.Task": "transportar e barganhar pelo bem maior",
+  "SDM.BackgroundRow28.Flavor": "decapolitano",
+  "SDM.BackgroundRow28.Role1": "protocolo",
+  "SDM.BackgroundRow28.Role2": "soldado",
+  "SDM.BackgroundRow28.Spin": "cruzar etiqueta minuciosa e rigor militar",
+  "SDM.BackgroundRow28.Task": "manter vivas as tradições marciais",
+  "SDM.BackgroundRow29.Flavor": "açafrão",
+  "SDM.BackgroundRow29.Role1": "astrólogo",
+  "SDM.BackgroundRow29.Role2": "general",
+  "SDM.BackgroundRow29.Spin": "manter ordem e disciplina",
+  "SDM.BackgroundRow29.Task": "divinar estratégias a partir das estrelas",
+  "SDM.BackgroundRow30.Flavor": "cavaleiro de contas",
+  "SDM.BackgroundRow30.Role1": "contador",
+  "SDM.BackgroundRow30.Role2": "monge",
+  "SDM.BackgroundRow30.Spin": "manter a flor de engrenagem girando",
+  "SDM.BackgroundRow30.Task": "garantir que os números sagrados subam",
+  "SDM.BackgroundRow31.Flavor": "deserto dourado",
+  "SDM.BackgroundRow31.Role1": "máquina",
+  "SDM.BackgroundRow31.Role2": "pastor",
+  "SDM.BackgroundRow31.Spin": "lubrificar e multiplicar máquinas",
+  "SDM.BackgroundRow31.Task": "manter os rebanhos sintéticos em ordem",
+  "SDM.BackgroundRow32.Flavor": "terra verde",
+  "SDM.BackgroundRow32.Role1": "conteúdo",
+  "SDM.BackgroundRow32.Role2": "promotor",
+  "SDM.BackgroundRow32.Spin": "apagar ideias falsas",
+  "SDM.BackgroundRow32.Task": "popularizar o mais novo entretenimento",
+  "SDM.BackgroundRow33.Flavor": "metropolitano",
+  "SDM.BackgroundRow33.Role1": "publicitário",
+  "SDM.BackgroundRow33.Role2": "servo",
+  "SDM.BackgroundRow33.Spin": "subterfúgio subversivo",
+  "SDM.BackgroundRow33.Task": "promover o lucro corporativo",
+  "SDM.BackgroundRow34.Flavor": "elfeiro",
+  "SDM.BackgroundRow34.Role1": "autodoc",
+  "SDM.BackgroundRow34.Role2": "enfermeiro",
+  "SDM.BackgroundRow34.Spin": "parasitizar mentes-máquina",
+  "SDM.BackgroundRow34.Task": "apoiar um golem mais esperto que você",
+  "SDM.BackgroundRow35.Flavor": "falsário",
+  "SDM.BackgroundRow35.Role1": "profissional",
+  "SDM.BackgroundRow35.Role2": "consumidor",
+  "SDM.BackgroundRow35.Spin": "desenvolver gosto requintado",
+  "SDM.BackgroundRow35.Task": "encarnar a ética apropriada",
+  "SDM.BackgroundRow36.Flavor": "perdido no tempo",
+  "SDM.BackgroundRow36.Role1": "lazer",
+  "SDM.BackgroundRow36.Role2": "maximizador",
+  "SDM.BackgroundRow36.Spin": "socialite bajulador e espião",
+  "SDM.BackgroundRow36.Task": "aproveitar os frutos da civilização",
+  "SDM.BackgroundRow37.Flavor": "astral",
+  "SDM.BackgroundRow37.Role1": "ladino",
+  "SDM.BackgroundRow37.Role2": "comerciante",
+  "SDM.BackgroundRow37.Spin": "raspar moedas por memórias",
+  "SDM.BackgroundRow37.Task": "contornar as regras pelo lucro",
+  "SDM.BackgroundRow38.Flavor": "ministério",
+  "SDM.BackgroundRow38.Role1": "espetáculo",
+  "SDM.BackgroundRow38.Role2": "andarilho",
+  "SDM.BackgroundRow38.Spin": "rato de túnel apagado",
+  "SDM.BackgroundRow38.Task": "servir de aviso aos preguiçosos",
+  "SDM.BackgroundRow39.Flavor": "bárbaro",
+  "SDM.BackgroundRow39.Role1": "primário",
+  "SDM.BackgroundRow39.Role2": "nobre",
+  "SDM.BackgroundRow39.Spin": "subverter a ordem estabelecida",
+  "SDM.BackgroundRow39.Task": "focar aspirações e desejos sociais",
+  "SDM.BackgroundRow40.Flavor": "andarilho do vazio",
+  "SDM.BackgroundRow40.Role1": "público",
+  "SDM.BackgroundRow40.Role2": "parente",
+  "SDM.BackgroundRow40.Spin": "abrir portas com seu sangue",
+  "SDM.BackgroundRow40.Task": "compartilhar amor social e vibrações",
+  "SDM.BackgroundSpin": "Ênfase",
+  "SDM.BackgroundTask": "Tarefa",
+  "SDM.BackgroundTraitCreated": "Traço de antecedente {flavor} {role} criado para o personagem {name}!",
   "SDM.BiomagicalCorruption": "Corrupção Biomágica",
   "SDM.brick-bastions": "Bastiões de Tijolo",
   "SDM.BurdensPenalty": "Cada fardo penaliza todas as rolagens em -1",
@@ -104,6 +318,7 @@
   "SDM.EffectsLabel.system.all_save_bonus": "Bônus para todas as rolagens de salvaguarda",
   "SDM.EffectsLabel.system.armor_bonus": "Bônus de armadura",
   "SDM.EffectsLabel.system.attack_bonus": "Bônus para todos os ataques",
+  "SDM.EffectsLabel.system.base_damage_multiplier": "Valor inicial do multiplicador de dado para acertos críticos",
   "SDM.EffectsLabel.system.burden_slots_bonus": "Afeta o número de espaços para fardos",
   "SDM.EffectsLabel.system.defense_bonus": "Bônus de defesa física",
   "SDM.EffectsLabel.system.fantascience.bonus": "Bônus de ataque com fantasciência",
@@ -125,6 +340,7 @@
   "SDM.EffectsLabel.system.social_defense_bonus": "Bônus de defesa social",
   "SDM.EffectsLabel.system.trait_slots_bonus": "Afeta o número de espaços para traços",
   "SDM.EffectsLabel.system.ward_bonus": "Bônus de proteção (afeta defesa mental e todas as rolagens de salvaguarda)",
+  "SDM.EffectsLabel.system.weapon_item_slots_bonus": "Número de armas que não ocupam espaços",
   "SDM.EffectSource": "Fonte",
   "SDM.EffectTemporary": "Efeitos Temporários",
   "SDM.EffectToggle": "Alternar Efeito",
